...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username_text_input_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

...
