<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dynamic IDX Sample</string>
    <string name="you_are_logged_in">You\'re logged in!</string>
    <string name="token_type">Token Type:</string>
    <string name="expires_in">Expires In:</string>
    <string name="access_token">Access Token:</string>
    <string name="refresh_token">Refresh Token:</string>
    <string name="id_token">Id Token:</string>
    <string name="scope">Scope:</string>
    <string name="claims">Claims</string>
...
